--- a/learn-jekyll/_layouts/default.html
+++ b/learn-jekyll/_layouts/default.html
@@ -13,9 +13,11 @@
       </div>
     </main>
     
+    {%- if page.mermaid -%}
     <script type="module">
       import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs';
     </script>
+    {%- endif -%}
 
     {%- include footer.html -%}
 
